@@ -4,6 +4,9 @@
   (bug #5980).
 - Explicitly link against gobject, add other missing libs (bug #6405).
 - Add workaround to fix empty <DefaultLayout> elements (bug #6882).
+- Derive the directory name of <DefaultMergeDirs> from the name of the
+  .menu file (e.g. preferences.menu becomes preferences-merged) (bug
+  #6491).
 
 
 0.1.3
